0.9.0/_sources/generated/statsmodels.discrete.discrete_model.CountResults.rst.txt
statsmodels.discrete.discrete_model.CountResults
================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: CountResults

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~CountResults.aic
    
    
      ~CountResults.bic
    
    
      ~CountResults.bse
    
    
      ~CountResults.conf_int
    
    
      ~CountResults.cov_params
    
    
      ~CountResults.f_test
    
    
      ~CountResults.fittedvalues
    
    
      ~CountResults.get_margeff
    
    
      ~CountResults.initialize
    
    
      ~CountResults.llf
    
    
      ~CountResults.llnull
    
    
      ~CountResults.llr
    
    
      ~CountResults.llr_pvalue
    
    
      ~CountResults.load
    
    
      ~CountResults.normalized_cov_params
    
    
      ~CountResults.predict
    
    
      ~CountResults.prsquared
    
    
      ~CountResults.pvalues
    
    
      ~CountResults.remove_data
    
    
      ~CountResults.resid
    
    
      ~CountResults.save
    
    
      ~CountResults.set_null_options
    
    
      ~CountResults.summary
    
    
      ~CountResults.summary2
    
    
      ~CountResults.t_test
    
    
      ~CountResults.t_test_pairwise
    
    
      ~CountResults.tvalues
    
    
      ~CountResults.wald_test
    
    
      ~CountResults.wald_test_terms
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~CountResults.use_t
   
   